--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
   <div class="container">
     <a class="navbar-brand" href="index.html">
@@ -147,7 +147,7 @@
   </div>
 </div>
 
-<!-- Cart Modal -->
+
 <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cart_m" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -163,15 +163,17 @@
       </div>
 
       <div class="modal-footer d-flex justify-content-between">
-        <button id="clear-cart" class="btn btn-danger">Clear Cart</button>
+       
         <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+       
+<button id="clear-cart" class="btn btn-danger">Clear Cart</button>
+
       </div>
 
     </div>
   </div>
 </div>
 
-<!-- Footer -->
 <footer class="bg-dark text-light text-center py-4">
   <div class="container">
     <h5>MINISTORE 🛍️</h5>
@@ -190,7 +192,7 @@
   </div>
 </footer>
 
-
+<script src ="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
